<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/posterDetail"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@drawable/poster_infinity_war" />

            <TextView
                android:id="@+id/tvTitleDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/posterDetail"
                app:layout_constraintTop_toTopOf="@+id/posterDetail"
                tools:text="@string/title_catalogue" />

            <TextView
                android:id="@+id/tvGenreDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvTitleDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleDetail"
                tools:text="@string/genre_catalogue" />

            <TextView
                android:id="@+id/tvUserScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/user_score_catalogue"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/posterDetail" />

            <TextView
                android:id="@+id/tvUserScoreDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tvUserScore"
                app:layout_constraintStart_toStartOf="@+id/tvUserScore"
                app:layout_constraintTop_toBottomOf="@+id/tvUserScore"
                tools:text="75%" />

            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:background="#DFDFDF"
                app:layout_constraintBottom_toBottomOf="@+id/tvUserScoreDetail"
                app:layout_constraintEnd_toStartOf="@+id/tvDuration"
                app:layout_constraintStart_toEndOf="@+id/tvUserScore"
                app:layout_constraintTop_toTopOf="@+id/tvUserScore" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/duration_catalogue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvUserScore" />

            <TextView
                android:id="@+id/tvDurationDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tvDuration"
                app:layout_constraintStart_toStartOf="@+id/tvDuration"
                app:layout_constraintTop_toBottomOf="@+id/tvDuration"
                tools:text="@string/duration_catalogue" />

            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:background="#DFDFDF"
                app:layout_constraintBottom_toBottomOf="@+id/tvYearDetail"
                app:layout_constraintEnd_toStartOf="@+id/tvYears"
                app:layout_constraintStart_toEndOf="@+id/tvDuration"
                app:layout_constraintTop_toTopOf="@+id/tvYears" />

            <TextView
                android:id="@+id/tvYears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/years_catalogue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvUserScore" />

            <TextView
                android:id="@+id/tvYearDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tvYears"
                app:layout_constraintStart_toStartOf="@+id/tvYears"
                app:layout_constraintTop_toBottomOf="@+id/tvYears"
                tools:text="@string/years_catalogue" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/overview_catalogue"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/posterDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvUserScoreDetail" />

            <TextView
                android:id="@+id/tvOverviewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/open_sans_regular"
                android:lineSpacingExtra="1dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvOverview"
                app:layout_constraintTop_toBottomOf="@+id/tvOverview"
                tools:text="@string/overview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/fab"
        android:focusable="true"
        android:foregroundGravity="bottom"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:fabSize="normal"
        app:layout_anchor="@id/nested_scrollview"
        app:layout_anchorGravity="bottom|end|right" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>