<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_movies"
        android:title="@string/menu_movies" />

    <item
        android:id="@+id/tvShowFragment"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/menu_tv_show" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorite" />
</menu>